2013-06-04  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/closest_trifacet.m: (0.2.1)

	- Update help header now that we have a C++ MEX implementation.

	* Add matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.1.0)
	* Add matlab/CgalToolbox/cgal_closest_trifacet.m: (0.1.0)
	* Add matlab/test/test_cgal_closest_trifacet.m: (0.1.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.0)

	- CGAL_CLOSEST_TRIFACET Closest triangular facet of a mesh to a
	point in 3D.

	* matlab/test/test_closest_trifacet.m: (0.2.1)

	- Add a new test point, closest to face 4.

2013-06-01  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/test_addpoint2tri.m: (0.1.0)
	* Add matlab/test/test_test_addpoint2tri.m: (0.1.0)

	- ADDPOINT2TRI Add one or more nodes to a triangular mesh.

	* matlab/ManifoldToolbox/closest_trifacet.m: (0.2.0)
	* matlab/test/test_closest_trifacet.m: (0.2.0)

	- Add output argument. Now distance from point to mesh is also
	provided.

	* matlab/ThirdPartyToolbox/pointTriangleDistance.m: (0.1.0)

	- Minor reformatting of the help header and add some Gerardus
	properties and headers.

	* Add matlab/ThirdPartyToolbox/pointTriangleDistance.m:
	* Add matlab/ThirdPartyToolbox/pointTriangleDistance-license.txt:

	- Calculate distance between a point and a triangle in 3D. By
	Gwendolyn Fischer. Downloaded from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/22857-distance-between-a-point-and-a-triangle-in-3d

	* Add matlab/ManifoldToolbox/closest_trifacet.m: (0.1.0)
	* Add matlab/test/test_closest_trifacet.m: (0.1.0)

	- CLOSEST_TRIFACET Closest triangular facet of a mesh to a point
	in 3D.

2013-05-31  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.0)

	- Add target to build cgal_closestfacet().

	* Add matlab/ManifoldToolbox/dmatrix_mesh.m: (0.1.0)

	- DMATRIX_MESH Sparse distance and shortest-path distance matrices
	between the nodes of a mesh.

	* Delete matlab/PointsToolbox/dmatrix_complete.m:
